使用 Colaboratory 建立

--- a/20220716.ipynb
+++ b/20220716.ipynb
@@ -1,21 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "20220716.ipynb",
-      "provenance": [],
-      "authorship_tag": "ABX9TyOssxRumFqUqghttt33LVhK",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -29,13 +12,13 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "_nTIVKzsjAyx"
+      },
       "source": [
         "##20220709作業參考解答\n",
         "api網址：https://www.moedict.tw/a/%E8%90%8C.json"
-      ],
-      "metadata": {
-        "id": "_nTIVKzsjAyx"
-      }
+      ]
     },
     {
       "cell_type": "code",
@@ -50,34 +33,32 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "import requests"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "Bf68zyupjL7d"
       },
-      "execution_count": 2,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "import requests"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "JXUciC2VjZXm"
+      },
+      "outputs": [],
       "source": [
         "def lookup(word):\n",
         "  url = \"https://www.moedict.tw/a/\"\n",
         "  data = requests.get(url + word+ \".json\").json()\n",
         "  return data['English']"
-      ],
-      "metadata": {
-        "id": "JXUciC2VjZXm"
-      },
-      "execution_count": 3,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "lookup(\"教室\")"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -86,39 +67,39 @@
         "id": "yXvM7Kg4kHLO",
         "outputId": "664bad6d-3e01-4af3-e822-2b4cab60a65e"
       },
-      "execution_count": 6,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "'classroom'"
-            ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
-            }
+            },
+            "text/plain": [
+              "'classroom'"
+            ]
           },
+          "execution_count": 6,
           "metadata": {},
-          "execution_count": 6
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "lookup(\"教室\")"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "import gradio"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "N_N46v90kPCt"
       },
-      "execution_count": 7,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "import gradio"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "gradio.Interface(lookup, \"text\", \"text\", title=\"漢英字典\").launch(share=True)"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -127,11 +108,10 @@
         "id": "Er3vYlLxkW_8",
         "outputId": "eca29f24-a1ba-4c7c-90fd-1986891a2c2c"
       },
-      "execution_count": 8,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Colab notebook detected. To show errors in colab notebook, set `debug=True` in `launch()`\n",
             "Running on public URL: https://16366.gradio.app\n",
@@ -140,19 +120,18 @@
           ]
         },
         {
-          "output_type": "display_data",
           "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
             "text/html": [
               "<div><iframe src=\"https://16366.gradio.app\" width=\"900\" height=\"500\" allow=\"autoplay; camera; microphone;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
             ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         },
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "(<gradio.routes.App at 0x7f4503871f90>,\n",
@@ -160,13 +139,20 @@
               " 'https://16366.gradio.app')"
             ]
           },
+          "execution_count": 8,
           "metadata": {},
-          "execution_count": 8
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "gradio.Interface(lookup, \"text\", \"text\", title=\"漢英字典\").launch(share=True)"
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "d7JRVVnQn0zf"
+      },
       "source": [
         "## 註冊 ZeroJudge\n",
         "\n",
@@ -175,13 +161,120 @@
         "解解看底下題目：\n",
         "* https://zerojudge.tw/ShowProblem?problemid=a002\n",
         "* https://zerojudge.tw/ShowProblem?problemid=a003"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 基本語法\n",
+        "\n",
+        "* 迴圈 (loops) => for, while\n",
+        "* 函式 (functions)\n",
+        "* 條件式 (if statements)\n",
+        "* 例外處理 (Exception Handling) "
       ],
       "metadata": {
-        "id": "d7JRVVnQn0zf"
+        "id": "LV-oN62UzHi2"
       }
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "### 例外處理"
+      ],
+      "metadata": {
+        "id": "GR-FpGKUzVvs"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def add(x, y):\n",
+        "  print(f\"{x} + {y} = {x + y}\")\n",
+        "\n",
+        "def sub(x, y):\n",
+        "  print(f\"{x} - {y} = {x - y}\")\n",
+        "\n",
+        "def mul(x, y):\n",
+        "  print(f\"{x} x {y} = {x * y}\")\n",
+        "\n",
+        "def div(x, y):\n",
+        "  print(f\"{x} / {y} = {x / y}\")"
+      ],
+      "metadata": {
+        "id": "7vTWrN0azZD9"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "functions = [add, div, mul, sub]"
+      ],
+      "metadata": {
+        "id": "X9Rv44QJzfhe"
+      },
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "add(2, 1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "U7OsnQsJzhI7",
+        "outputId": "85c88c55-9bb7-41a7-9f2b-847fb99345af"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2 + 1 = 3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = 4\n",
+        "y = 2\n",
+        "for func in functions:\n",
+        "  func(x, y)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zfdojYSnzldz",
+        "outputId": "dba11cfa-1c4a-42e5-cc02-1ba400c90f86"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4 + 2 = 6\n",
+            "4 / 2 = 2.0\n",
+            "4 x 2 = 8\n",
+            "4 - 2 = 2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "D8Da4Es2oADf"
+      },
       "source": [
         "## 資料分析簡介\n",
         "* Numpy\n",
@@ -193,26 +286,26 @@
         "* Pandas\n",
         "  * Panel Data\n",
         "  * 資料分析基礎套件"
-      ],
-      "metadata": {
-        "id": "D8Da4Es2oADf"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "oN-8jvWZquQk"
+      },
       "source": [
         "```python\n",
         "import numpy as np【別名】\n",
         "import matplotlib.pyplot as plt\n",
         "import pandas as pd\n",
         "```"
-      ],
-      "metadata": {
-        "id": "oN-8jvWZquQk"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "EcW36FzrqVUf"
+      },
       "source": [
         "## Numpy\n",
         "\n",
@@ -220,10 +313,104 @@
         "  * ndarray => Multi-Dimentional Array\n",
         "* new functions to process data\n",
         "  * ufunc => Universal Functions"
-      ],
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "EcW36FzrqVUf"
-      }
+        "id": "kQ5AmzPtr-gH"
+      },
+      "outputs": [],
+      "source": [
+        "x1 = [1, 2, 3]\n",
+        "x2 = [4, 5, 6]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MHuHv6JgsTOQ",
+        "outputId": "fbbad586-95bc-4e5a-cb5d-daf8e46e6fee"
+      },
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[1, 2, 3, 4, 5, 6]"
+            ]
+          },
+          "execution_count": 10,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "#向量相加 下列算式是錯誤的\n",
+        "x1 + x2"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7Xm9qgM8s3ll",
+        "outputId": "45355c75-a280-4986-8822-6f8e011ab3a0"
+      },
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[1, 2, 3, 1, 2, 3]"
+            ]
+          },
+          "execution_count": 11,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "#向量乘法 下列算式是錯誤的\n",
+        "2*x1"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 15,
+      "metadata": {
+        "id": "KjfO-xzxtSeK"
+      },
+      "outputs": [],
+      "source": [
+        "#向量運算\n",
+        "x3 = []\n",
+        "for i, j in zip(x1, x2):\n",
+        "  x3.append(i + j)"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "name": "20220716.ipynb",
+      "provenance": [],
+      "authorship_tag": "ABX9TyO3bnkBbPdYR71m500TiXRy",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
