使用 Colaboratory 建立

--- a/20220723.ipynb
+++ b/20220723.ipynb
@@ -6,7 +6,7 @@
       "name": "20220723.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPfhnrSRUpd6LPCxrxn8iMV",
+      "authorship_tag": "ABX9TyOd+Hul5fkq68tvxdqR3f2E",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2888,11 +2888,11 @@
         "df['Close'][-1]/df['Close'][0]"
       ],
       "metadata": {
-        "id": "78iv0e6jMYmo",
-        "outputId": "3805591e-ede5-4527-9fad-7a07aebc2198",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "78iv0e6jMYmo",
+        "outputId": "3805591e-ede5-4527-9fad-7a07aebc2198"
       },
       "execution_count": 89,
       "outputs": [
@@ -2905,6 +2905,398 @@
           },
           "metadata": {},
           "execution_count": 89
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df = yf.download(\"MSFT\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jdsUsBO4Mv_W",
+        "outputId": "cafb2500-8d91-43b5-b1c9-78e41bc1854c"
+      },
+      "execution_count": 90,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\r[*********************100%***********************]  1 of 1 completed\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df['2012-10':]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 455
+        },
+        "id": "gq4s2rvNM8HH",
+        "outputId": "6d7702af-9fdf-4d63-d50a-4cc8d848bb82"
+      },
+      "execution_count": 91,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "                  Open        High         Low       Close   Adj Close  \\\n",
+              "Date                                                                     \n",
+              "2012-10-01   29.809999   29.980000   29.420000   29.490000   24.237755   \n",
+              "2012-10-02   29.680000   29.889999   29.500000   29.660000   24.377478   \n",
+              "2012-10-03   29.750000   29.990000   29.670000   29.860001   24.541862   \n",
+              "2012-10-04   29.969999   30.030001   29.570000   30.030001   24.681583   \n",
+              "2012-10-05   30.230000   30.250000   29.740000   29.850000   24.533640   \n",
+              "...                ...         ...         ...         ...         ...   \n",
+              "2022-07-18  259.750000  260.839996  253.300003  254.250000  254.250000   \n",
+              "2022-07-19  257.579987  259.720001  253.679993  259.529999  259.529999   \n",
+              "2022-07-20  259.899994  264.869995  258.910004  262.269989  262.269989   \n",
+              "2022-07-21  259.790009  264.890015  257.029999  264.839996  264.839996   \n",
+              "2022-07-22  265.239990  265.329987  259.070007  260.359985  260.359985   \n",
+              "\n",
+              "              Volume  \n",
+              "Date                  \n",
+              "2012-10-01  54042700  \n",
+              "2012-10-02  43338900  \n",
+              "2012-10-03  46655900  \n",
+              "2012-10-04  43634900  \n",
+              "2012-10-05  41133900  \n",
+              "...              ...  \n",
+              "2022-07-18  20975000  \n",
+              "2022-07-19  25012600  \n",
+              "2022-07-20  22788300  \n",
+              "2022-07-21  22404700  \n",
+              "2022-07-22  21871000  \n",
+              "\n",
+              "[2468 rows x 6 columns]"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-616a68ae-b528-4534-b02b-2f0b2748b92d\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Open</th>\n",
+              "      <th>High</th>\n",
+              "      <th>Low</th>\n",
+              "      <th>Close</th>\n",
+              "      <th>Adj Close</th>\n",
+              "      <th>Volume</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Date</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>2012-10-01</th>\n",
+              "      <td>29.809999</td>\n",
+              "      <td>29.980000</td>\n",
+              "      <td>29.420000</td>\n",
+              "      <td>29.490000</td>\n",
+              "      <td>24.237755</td>\n",
+              "      <td>54042700</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2012-10-02</th>\n",
+              "      <td>29.680000</td>\n",
+              "      <td>29.889999</td>\n",
+              "      <td>29.500000</td>\n",
+              "      <td>29.660000</td>\n",
+              "      <td>24.377478</td>\n",
+              "      <td>43338900</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2012-10-03</th>\n",
+              "      <td>29.750000</td>\n",
+              "      <td>29.990000</td>\n",
+              "      <td>29.670000</td>\n",
+              "      <td>29.860001</td>\n",
+              "      <td>24.541862</td>\n",
+              "      <td>46655900</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2012-10-04</th>\n",
+              "      <td>29.969999</td>\n",
+              "      <td>30.030001</td>\n",
+              "      <td>29.570000</td>\n",
+              "      <td>30.030001</td>\n",
+              "      <td>24.681583</td>\n",
+              "      <td>43634900</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2012-10-05</th>\n",
+              "      <td>30.230000</td>\n",
+              "      <td>30.250000</td>\n",
+              "      <td>29.740000</td>\n",
+              "      <td>29.850000</td>\n",
+              "      <td>24.533640</td>\n",
+              "      <td>41133900</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2022-07-18</th>\n",
+              "      <td>259.750000</td>\n",
+              "      <td>260.839996</td>\n",
+              "      <td>253.300003</td>\n",
+              "      <td>254.250000</td>\n",
+              "      <td>254.250000</td>\n",
+              "      <td>20975000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2022-07-19</th>\n",
+              "      <td>257.579987</td>\n",
+              "      <td>259.720001</td>\n",
+              "      <td>253.679993</td>\n",
+              "      <td>259.529999</td>\n",
+              "      <td>259.529999</td>\n",
+              "      <td>25012600</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2022-07-20</th>\n",
+              "      <td>259.899994</td>\n",
+              "      <td>264.869995</td>\n",
+              "      <td>258.910004</td>\n",
+              "      <td>262.269989</td>\n",
+              "      <td>262.269989</td>\n",
+              "      <td>22788300</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2022-07-21</th>\n",
+              "      <td>259.790009</td>\n",
+              "      <td>264.890015</td>\n",
+              "      <td>257.029999</td>\n",
+              "      <td>264.839996</td>\n",
+              "      <td>264.839996</td>\n",
+              "      <td>22404700</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2022-07-22</th>\n",
+              "      <td>265.239990</td>\n",
+              "      <td>265.329987</td>\n",
+              "      <td>259.070007</td>\n",
+              "      <td>260.359985</td>\n",
+              "      <td>260.359985</td>\n",
+              "      <td>21871000</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>2468 rows × 6 columns</p>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-616a68ae-b528-4534-b02b-2f0b2748b92d')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-616a68ae-b528-4534-b02b-2f0b2748b92d button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-616a68ae-b528-4534-b02b-2f0b2748b92d');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 91
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df['2012-10':]['Close'][-1]/df['2012-10':]['Close'][0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UBYGJrlEM9DI",
+        "outputId": "24990463-d595-4265-b21d-30b610e8635b"
+      },
+      "execution_count": 92,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "8.82875508213985"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 92
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df = yf.download(\"TSLA\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MnjS8bLpNMUn",
+        "outputId": "9dabbedd-c158-406d-c5da-cfaa30650a45"
+      },
+      "execution_count": 93,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\r[*********************100%***********************]  1 of 1 completed\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(2010,2023):\n",
+        "  ret=df[str(i)]['Close'][-1]/df[str(i)]['Close'][0]\n",
+        "  print(i, \"==>\" ,ret)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "H0aofOCBNSVw",
+        "outputId": "a65a92bb-70f5-4f77-cfe3-5fc13a2037eb"
+      },
+      "execution_count": 100,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2010 ==> 1.11469241307951\n",
+            "2011 ==> 1.072877539455723\n",
+            "2012 ==> 1.2061965733953064\n",
+            "2013 ==> 4.2542421279559335\n",
+            "2014 ==> 1.4817454285581042\n",
+            "2015 ==> 1.0943869279954357\n",
+            "2016 ==> 0.9564925410979382\n",
+            "2017 ==> 1.4348587991500041\n",
+            "2018 ==> 1.0382802646164202\n",
+            "2019 ==> 1.3489294904017222\n",
+            "2020 ==> 8.200506285659165\n",
+            "2021 ==> 1.4481000877175962\n",
+            "2022 ==> 0.6807331015064407\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:2: FutureWarning: Indexing a DataFrame with a datetimelike index using a single string to slice the rows, like `frame[string]`, is deprecated and will be removed in a future version. Use `frame.loc[string]` instead.\n",
+            "  \n"
+          ]
         }
       ]
     }
