--- a/20220723.ipynb
+++ b/20220723.ipynb
@@ -6,7 +6,7 @@
       "name": "20220723.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOd+Hul5fkq68tvxdqR3f2E",
+      "authorship_tag": "ABX9TyN7PbxaYiItZMZtQH438L3r",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3296,6 +3296,281 @@
           "text": [
             "/usr/local/lib/python3.7/dist-packages/ipykernel_launcher.py:2: FutureWarning: Indexing a DataFrame with a datetimelike index using a single string to slice the rows, like `frame[string]`, is deprecated and will be removed in a future version. Use `frame.loc[string]` instead.\n",
             "  \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###a003: 兩光法師占卜術 參考作法\n",
+        "題目：兩光法師時常替人占卜，由於他算得又快有便宜，因此生意源源不絕，時常大排長龍，他想算 得更快一點，因此找了你這位電腦高手幫他用電腦來加快算命的速度。\n",
+        "他的占卜規則很簡單，規則是這樣的，輸入一個日期，然後依照下面的公式：\n",
+        "\n",
+        "* M=月\n",
+        "* D=日\n",
+        "* S=(M*2+D)%3【%：取餘數】\n",
+        "\n",
+        "得到 S 的值，再依照 S 的值從0到2分別給與普通、吉、大吉 等三種不同的運勢。"
+      ],
+      "metadata": {
+        "id": "1ecuijlEhsvY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "3 % 3"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ykSFXu1qiGVR",
+        "outputId": "c6d85237-8575-40cd-8f11-2bb5db0b9433"
+      },
+      "execution_count": 101,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 101
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "4 % 3"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oXFYefXYiQpw",
+        "outputId": "fe75017c-bfba-43aa-bacc-7829573398f8"
+      },
+      "execution_count": 102,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 102
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "5 % 3"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HAWeOEwhiXT1",
+        "outputId": "83d9a3b1-ac66-4a55-d39f-0d964692d353"
+      },
+      "execution_count": 103,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 103
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "6 % 3"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_B2OZCw_iaxf",
+        "outputId": "6dc7401f-f05e-4d70-a176-0aa65845928a"
+      },
+      "execution_count": 104,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 104
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def analyze(M, D):\n",
+        "  results = [\"普通\", \"吉\", \"大吉\"]\n",
+        "  S=(M*2+D)%3\n",
+        "  return results[S]"
+      ],
+      "metadata": {
+        "id": "sYjramibigEF"
+      },
+      "execution_count": 105,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "analyze(1, 3)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "KO3r4UO8io5a",
+        "outputId": "cc8bb968-a9c3-48c4-81ac-b139067e5f2c"
+      },
+      "execution_count": 106,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'大吉'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 106
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data = input()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rR8tRaP1jXrC",
+        "outputId": "49897dfa-d9db-4123-f7c9-a9b837f1ec6c"
+      },
+      "execution_count": 111,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1 1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "NU7jlcEejflW",
+        "outputId": "447e1aef-35d1-40ad-a8a6-c209fe259cf3"
+      },
+      "execution_count": 112,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'1 1'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 112
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data.split()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dXZeN1V6jkz-",
+        "outputId": "84c271ca-4113-4994-e3a9-9d1029db8c9a"
+      },
+      "execution_count": 113,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['1', '1']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 113
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "results = [\"普通\", \"吉\", \"大吉\"]\n",
+        "data = input().split()\n",
+        "\n",
+        "M = int(data[0])\n",
+        "D = int(data[1])\n",
+        "\n",
+        "S=(M*2+D)%3\n",
+        "print(results[S])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "p6QbHeyKjvUG",
+        "outputId": "90bbbb40-1159-428e-ecef-6faa81f8892d"
+      },
+      "execution_count": 114,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10 7\n",
+            "普通\n"
           ]
         }
       ]
