使用 Colaboratory 建立

--- a/20220723.ipynb
+++ b/20220723.ipynb
@@ -6,7 +6,7 @@
       "name": "20220723.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOYLYVyNA+n1GutdQR2yh5F",
+      "authorship_tag": "ABX9TyNR7//9nq5DiiKkO2hnq0gu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3932,6 +3932,19 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Homework:\n",
+        "\n",
+        "* 自己解一下 [ZeroJudge a009](https://zerojudge.tw/ShowProblem?problemid=a009)\n",
+        "* 安裝 [Anaconda](https://www.anaconda.com/)\n",
+        "* 安裝 [Visual Studio Code](https://code.visualstudio.com/)"
+      ],
+      "metadata": {
+        "id": "KGbiO_krEf11"
+      }
     }
   ]
 }
